feat(import&export): display the export completion dialog once export is done
refs: #38

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Strings/be-BY/Resources.resw
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Strings/be-BY/Resources.resw
@@ -436,4 +436,7 @@
   <data name="ImportTitle" xml:space="preserve">
     <value>Імпарт</value>
   </data>
+  <data name="ExportResultTitle" xml:space="preserve">
+    <value>Вынікі Экспарту</value>
+  </data>
 </root>
