--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Strings/be-BY/Resources.resw
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Strings/be-BY/Resources.resw
@@ -457,4 +457,13 @@
   <data name="ImportMasterKey_Label" xml:space="preserve">
     <value>Архіў зашыфраваны - калі ласка, увядзіце ключ</value>
   </data>
+  <data name="Content" xml:space="preserve">
+    <value>Змест</value>
+  </data>
+  <data name="Content_FormattedValueLabel" xml:space="preserve">
+    <value>{0} пароляў</value>
+  </data>
+  <data name="CatalogDeleted_FormattedMessage" xml:space="preserve">
+    <value>Каталог "{0}" быў паспяхова выдалены</value>
+  </data>
 </root>
