refactoring: update the ExportImportViewModel to consider Validator.ErrorsChanged event
refs: #38

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Strings/be-BY/Resources.resw
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Strings/be-BY/Resources.resw
@@ -493,4 +493,7 @@
   <data name="GeneratedPackage_Label" xml:space="preserve">
     <value>Згенераваны Пакет</value>
   </data>
+  <data name="ArchiveEncryptionPassword_Placeholder" xml:space="preserve">
+    <value>Пароль для шыфравання архіва</value>
+  </data>
 </root>
